creation of a hashing

--- a/bit.html
+++ b/bit.html
@@ -3,50 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="stylesheet" href="bit.css">
-  <title>Bitcoin Learning Journal</title>
+  <link rel="stylesheet" href="./bit.css">
+  <script defer src="./bit.js"></script>
+  <title>Document</title>
 </head>
-
 <body>
+  <h1> Hash Change Visualizer</h1>
 
-  <!-- Header -->
-  <header>
-    <h1>Bitcoin Learning Journal</h1>
-    <p>Daily notes on Bitcoin, blockchain, and cryptography</p>
-  </header>
+  <p>Type something below</p>
 
-  <!-- Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#">Articles</a>
-    <a href="#">About</a>
-    <a href="#">GitHub</a>
-  </nav>
+  <textarea id="input"></textarea>
 
-  <!-- Main Content -->
-  <main>
-
-    <section class="intro">
-      <h2>Welcome</h2>
-      <p>
-        This website documents my daily learning journey
-        about Bitcoin and decentralized systems.
-      </p>
-    </section>
-
-    <section class="posts">
-      
-    
-
-    </section>
-
-  </main>
-  <footer>
-    Footer
-  </footer>
-
-  
-
+  <div class="box">
+    <strong>SHA-256 Hash:</strong>
+    <p id="hash">---</p>
+  </div>
 </body>
 </html>
