--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Hash Playground</title>
 </head>
 <body>
-
+  <main>
   <div class="container">
 
     <h1>🔐 Hash Playground</h1>
@@ -74,6 +74,6 @@
     </div>
 
   </div>
-
+  </main>
 </body>
 </html>
